# rubiks

./: CHANGELOG.md  LICENSE  alg.cubing.net  ghcid.sh  hie.yaml  nixpkgs.nix  release.nix  rubiks.cabal  yie.haml
app/: Main.hs
src/: Cube.hs  Parser.hs
